--- a/config/_default/menus/menus.ja.toml
+++ b/config/_default/menus/menus.ja.toml
@@ -56,7 +56,6 @@
   url = "/commands/"
 
 
-
 # LOW LEVEL ITEMS
 
 
@@ -73,7 +72,7 @@
   url = "/tools/"
 
 [[docs]]
-  name = "ホスティングとデプロイメント"
+  name = "ホスティングとデプロイ"
   weight = 80
   identifier = "hosting-and-deployment"
   url = "/hosting-and-deployment/"
@@ -84,6 +83,15 @@
   post = "break"
   identifier = "contribute"
   url = "/contribute/"
+
+# for Japanese only
+
+[[docs]]
+  name = "日本語版について"
+  weight = 110
+  identifier = "hugo-ja"
+  url = "/hugo-ja/"
+
 
 #[[docs]]
 #  name = "Tags"
