change my Google Analytics in config.toml

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -4,7 +4,7 @@ baseURL = "https://juggernautjp.github.io/hugo-docs-ja"
 # defaultContentLanguage = "en"
 defaultContentLanguage = "ja"
 enableEmoji = true
-googleAnalytics = "UA-7131036-4"
+googleAnalytics = "G-TT4FBJ4J5Z"
 ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
 # languageCode = "en-us"
 languageCode = "ja-jp"
